--- a/dotconfig/kitty/kitty.conf
+++ b/dotconfig/kitty/kitty.conf
@@ -734,11 +734,11 @@ font_size 8.0
 #: Color scheme {{{
 
 # foreground #dddddd
-# background #000000
+background #400050
 
 #: The foreground and background colors
 
-# background_opacity 1.0
+background_opacity 0.85
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
