new link installer, pip config

--- a/dotconfig/kitty/kitty.conf
+++ b/dotconfig/kitty/kitty.conf
@@ -495,9 +495,9 @@ font_size 8.0
 
 #: Window layout {{{
 
-# remember_window_size  yes
-# initial_window_width  640
-# initial_window_height 400
+remember_window_size  no
+initial_window_width  40c
+initial_window_height 25c
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -1076,7 +1076,7 @@ background_opacity 0.85
 #: mouse cursor invisible on dual GPU machines. Changing this setting
 #: by reloading the config is not supported.
 
-#linux_display_server x11
+# linux_display_server x11
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
