lots of color work

--- a/dotconfig/kitty/kitty.conf
+++ b/dotconfig/kitty/kitty.conf
@@ -466,12 +466,12 @@ font_size 8.0
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
 
-# visual_bell_duration 0.0
+visual_bell_duration 0.1
 
 #: Visual bell duration. Flash the screen when a bell occurs for the
 #: specified number of seconds. Set to zero to disable.
@@ -496,8 +496,8 @@ font_size 8.0
 #: Window layout {{{
 
 remember_window_size  no
-initial_window_width  40c
-initial_window_height 25c
+initial_window_width  80c
+initial_window_height 50c
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -611,7 +611,7 @@ initial_window_height 25c
 #: scaled. A value of blank means draw a blank window. A value of size
 #: means show the window size in cells.
 
-# resize_in_steps no
+resize_in_steps yes
 
 #: Resize the OS window in steps as large as the cells, instead of
 #: with the usual pixel accuracy. Combined with an
@@ -646,7 +646,7 @@ initial_window_height 25c
 #: the second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of: fade, separator, powerline, or
 #: hidden. In the fade style, each tab's edges fade into the
@@ -734,7 +734,7 @@ initial_window_height 25c
 #: Color scheme {{{
 
 # foreground #dddddd
-background #400050
+background #303030
 
 #: The foreground and background colors
 
@@ -1076,7 +1076,7 @@ background_opacity 0.85
 #: mouse cursor invisible on dual GPU machines. Changing this setting
 #: by reloading the config is not supported.
 
-# linux_display_server x11
+linux_display_server x11
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
