--- a/dotconfig/kitty/kitty.conf
+++ b/dotconfig/kitty/kitty.conf
@@ -983,7 +983,7 @@ background_opacity 0.85
 #: with the mouse. The special value of ``ask`` means that kitty will
 #: ask before opening the link.
 
-# term xterm-kitty
+term xterm
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
