fix issue with kitty shell

--- a/dotconfig/kitty/kitty.conf
+++ b/dotconfig/kitty/kitty.conf
@@ -933,7 +933,7 @@ background_opacity 0.85
 #: details. Changing this option by reloading the config is not
 #: supported.
 
-# env 
+env TERMINFO_DIRS=/usr/share/terminfo:/etc/terminfo:/lib/terminfo
 
 #: Specify environment variables to set in all child processes. Note
 #: that environment variables are expanded recursively, so if you
