--- a/homedir/.gitconfig
+++ b/homedir/.gitconfig
@@ -1,7 +1,11 @@
 [user]
 	email = egnor@ofb.net
 	name = Dan Egnor
+[push]
+	default = upstream
 [credential]
 	helper = store
+[core]
+	editor = vi
 [pull]
 	ff = only
