use operator mono for kitty

--- a/dotconfig/kitty/kitty.conf
+++ b/dotconfig/kitty/kitty.conf
@@ -23,6 +23,10 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
+font_family Operator Mono SSm Book
+bold_font Operator Mono SSm Bold
+italic_font Operator Mono SSm Book Italic
+bold_italic_font Operator Mono SSm Bold Italic
 font_size 8.0
 
 #: Font size (in pts)
