--- a/homedir/.gitconfig
+++ b/homedir/.gitconfig
@@ -5,7 +5,13 @@
 	default = upstream
 [credential]
 	helper = store
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
 [core]
+	autocrlf = input
 	editor = vi
 [pull]
 	ff = only
