--- a/homedir/.gitconfig
+++ b/homedir/.gitconfig
@@ -17,3 +17,11 @@
 	ff = only
 [alias]
 	ack = ! git ls-files --others --cached --exclude-standard -z | xargs -0 ack
+[credential "https://github.com"]
+	helper = 
+	helper = !gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !gh auth git-credential
+[init]
+	defaultBranch = main
