--- a/homedir/.gitconfig
+++ b/homedir/.gitconfig
@@ -20,8 +20,5 @@
 	helper = !gh auth git-credential
 [init]
 	defaultBranch = main
-[filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
-	required = true
+[diff]
+	tool = bc4
