--- a/homedir/.config/kitty/kitty.conf
+++ b/homedir/.config/kitty/kitty.conf
@@ -19,4 +19,4 @@ background_opacity 0.85
 env TERMINFO_DIRS=/usr/share/terminfo:/etc/terminfo:/lib/terminfo
 term xterm
 
-linux_display_server x11
+# linux_display_server x11
