--- a/homedir/.config/kitty/kitty.conf
+++ b/homedir/.config/kitty/kitty.conf
@@ -4,6 +4,7 @@ italic_font Operator Mono SSm Book Italic
 bold_italic_font Operator Mono SSm Bold Italic
 font_size 8.0
 
+cursor_trail 100
 enable_audio_bell no
 visual_bell_duration 0.1
 
