--- a/homedir/.gitconfig
+++ b/homedir/.gitconfig
@@ -28,3 +28,8 @@
 	helper = !gh auth git-credential
 [diff "lfstext"]
 	textconv = cat
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
