--- a/homedir/.config/mise/config.toml
+++ b/homedir/.config/mise/config.toml
@@ -1,8 +1,8 @@
-[tools]
 luajit = "latest"
 neovim = "latest"
 node = "24"
 python = "3.12"
+"cargo:rep-grep" = "latest"
 ripgrep = "latest"
 "ubi:junegunn/fzf" = "latest"
 
