remove fzf, tweak kitty

--- a/homedir/.config/kitty/kitty.conf
+++ b/homedir/.config/kitty/kitty.conf
@@ -4,8 +4,11 @@ italic_font Operator Mono SSm Book Italic
 bold_italic_font Operator Mono SSm Bold Italic
 font_size 8.0
 
+background #303030
+background_opacity 0.85
 cursor_trail 100
 enable_audio_bell no
+tab_bar_style powerline
 visual_bell_duration 0.1
 
 remember_window_size  no
@@ -13,9 +16,7 @@ initial_window_width  80c
 initial_window_height 50c
 resize_in_steps yes
 
-tab_bar_style powerline
-background #303030
-background_opacity 0.85
+paste_actions replace-dangerous-control-codes
 
 env TERMINFO_DIRS=/usr/share/terminfo:/etc/terminfo:/lib/terminfo
 term xterm
